upgraded the footer, fixed some overflow issues on Home

--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -9,4 +9,12 @@
   bottom: 0;
   text-align: center;
   width: 100%;
+  background-color: gray;
+}
+
+#linkedinIcon {
+  color: white;
+  width: 15vmin;
+  height: 15vmin;
+  margin-left: 5vmin;
 }
